ansible-nginx/main.tf
provider "aws" {
    region = "us-east-1"
}

resource "tls_private_key" "key" {
    algorithm = "RSA"
}

resource "local_sensitive_file" "private_key" {
    filename = "${path.module}/ansible.pem"
    content = tls_private_key.key.private_key_pem
    file_permission = "0400"
}

resource "aws_key_pair" "key_pair" {
    key_name = "ansible"
    public_key = tls_private_key.key.public_key_openssh
}

resource "aws_security_group" "allow_ssh" {
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 5000
        to_port = 5000
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

data "aws_ami" "ubuntu" {
    most_recent = true

    filter {
        name = "name"
        values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
    }

    owners = ["099720109477"]
}

resource "aws_instance" "ansible_server" {
    ami = data.aws_ami.ubuntu.id
    instance_type = "t3.micro"

    vpc_security_group_ids = [aws_security_group.allow_ssh.id]
    key_name = aws_key_pair.key_pair.key_name

    provisioner "remote-exec" {
        inline = [
            "sudo apt update -y",
            "sudo apt install -y software-properties-common",
            "sudo apt-add-repository --yes --update ppa:ansible/ansible",
            "sudo apt install -y ansible"
        ]

        connection {
            type = "ssh"
            user = "ubuntu"
            private_key = tls_private_key.key.private_key_pem
            host = self.public_ip
        }
    }

    provisioner "local-exec" {
        command = "ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -u ubuntu --key-file ansible.pem -T 300 -i '${self.public_ip},', playbook.yaml"
    }

    tags = {
        Name = "Ansible Server"
    }
}

output "ec2" {
  value       = aws_instance.ansible_server.public_ip
}
